<resources>
    <string name="app_name">PROYECTOsccm</string>
    <string name="t1">TESOEM</string>
    <string name="t2">Proyecto Primer Parcial</string>
    <string name="img1">Tesoem</string>
    <string name="t3">Introduccion a Dispositivos Moviles</string>
    <string name="t4">Silvia del Carmen Cardona Moreno</string>
    <string name="t5">\"Breve Historia de México\"</string>
    <string name="img2">Bandera de Mexico</string>
    <string name="t6">7S11</string>
    <string name="t7">MENU DE OPCIONES</string>
    <string name="b1">Personajes Más Relevantes</string>
    <string name="b2">Bandera de México</string>
    <string name="b3">Culturas Prehispánicas</string>
    <string name="b4">Presidentes Más Relevantes</string>
    <string name="b5">Acerca de.....</string>
    <string name="b6">Revolución Mexicana</string>
    <string name="b7" />
    <string name="b71">Independencia de Mexico</string>
    <string name="b8">Separacion de Texas</string>
    <string name="b9">Pantalla Principal</string>
    <string name="txt1">¿Sabías qué?....</string>
    <string name="txt2">La Historia de México crea conciencia en el estudiante de los tropiezos que se han tenido como país, a partir de un análisis riguroso y sistemático, basado en el auxilio de las demás ciencias; para que con el conocimiento de causa, determine su actuación en el entorno cercano y coadyuve a mejorar su relación con las mujeres y hombres del grupo social en que se desenvuelve.</string>
    <string name="btnm">Menu de Opciones</string>
    <string name="texto">PERSONAJES</string>
    <string name="ntb11">Menu de Opciones</string>
    <string name="img3">Personajes</string>
    <string name="texto1">Significado de la Bandera de México</string>
    <string name="img4">significado</string>
    <string name="img5">band</string>
    <string name="btn12">Menu de Opciones</string>
    <string name="salida">Salir del Proyecto</string>
    <string name="culturas">Culturas Prehispánicas</string>
    <string name="img6">prehispanicas</string>
    <string name="bnt14">Menu de Opciones</string>
    <string name="presidente">Presidentes de México</string>
    <string name="img9">Presis</string>
    <string name="txt6">Menu de Opciones</string>
    <string name="rev">Revolucion Mexicana</string>
    <string name="img16">revolucion</string>
    <string name="btn22">Menu de Opciones</string>
    <string name="ind">Independencia de México</string>
    <string name="img66">Independencia</string>
    <string name="btn77">Menu de Opciones</string>
    <string name="text">Serapacion de Texas</string>
    <string name="hsj">Texas</string>
    <string name="btnn">Menu de Operaciones</string>
</resources>
